# tuplesaver

./: .gitignore  .pre-commit-config.yaml  README.md  SCRATCH.md  TODO.md  example.ipynb  example_query2.ipynb  migrate.md  pyproject.toml  scratch.ipynb
micro_namedtuple_sqlite_persister/: adaptconvert.py  adaptconvert_test.py  conftest.py  conftest_test.py  cursorproxy.py  cursorproxy_test.py  engine.py  engine_test.py  functional_test.py  model.py  model_test.py  persister.py  persister_ddl_test.py  persister_test.py  query.py  query2.py  query2_test.py  query_test.py
modelexperiments/: DCT.py  NTM.py  RM.py  model_bench.py  rowmeta_test.py
tuplesaver/: DCT.py  NTM.py  RM.py  adaptconvert.py  adaptconvert_test.py  conftest.py  conftest_test.py  cursorproxy.py  cursorproxy_test.py  engine.py  engine_ddl_test.py  engine_test.py  migrate.py  migrate_cli.py  migrate_cli_test.py  migrate_test.py  model.py  model_test.py  query.py  rowmeta.py  rowmeta_test.py  sql.py  sql_test.py  status_test.py
tuplesaver/migrate_scenarios/empty_db/: SCENARIO.md
tuplesaver/migrate_scenarios/fresh_db_with_model/: SCENARIO.md  m.py
