[project]
name = "tuplesaver"
version = "0.1.0"
description = "A simple, opinionated, NamedTuple persister for SQLite."
authors = [{ name = "y2k", email = "git@y2kbugger.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "apsw>=3.51.1.0",
]

[project.scripts]
tuplesaver = "tuplesaver:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "pytest-benchmark>=5.1.0,<6",
]
examplenotebook = [
    "ipykernel",
    "pandas",
    "matplotlib>=3.10.3,<4",
    "networkx~=3.5",
]
profiling = [
    "snakeviz>=2.2.2,<3",
    "scalene>=1.5.51,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "examplenotebook",
    "profiling",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[tool.pytest.ini_options]
minversion = "8.0"
python_files = "*_test.py"
markers = [
    "slow: marks tests as slow",
]

addopts = [
    "--benchmark-columns=min,median,iqr,stddev,iterations,rounds,ops",
    "--benchmark-max-time=0.25",
    "--benchmark-group-by=name",
    "--benchmark-sort=fullname",
    "--benchmark-name=short",
    "--benchmark-disable",
    ]

testpaths = ["tuplesaver"]

[tool.ruff]

# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".ipynb_checkpoints",
    ".pytest_cache",
    ".ruff_cache",
    "*.ipynb",
]

line-length = 190
indent-width = 4

[tool.ruff.lint]
select = ["FIX", "TD", "F", "A", "COM", "B", "C4", "E", "U", "ERA", "W1", "W2", "I", "ANN001", "ANN201", "RUF100", "ICN", "SLF", "SIM","PTH","PD","RUF"]
ignore = ["TD001", "TD002", "TD003", "SIM105", "PD901", "PD010", "PD002", "PD008", "FIX002", "COM812", "SIM102", "SIM108", "C408", "C416", "E731", "SIM103"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true
docstring-code-line-length = "dynamic"

quote-style = "preserve"
